# sem-image-analysis

./: .gitignore  README.md  REPRODUCIBILITY.md  experiment_manifest.yaml  pyproject.toml  report.html  requirements-dev.txt  requirements.txt  run_all.ps1
configs/sweeps/: sem_default.yaml
data/: sft_annotations.csv  sft_catalog.csv
data/crystal/analysis/: cluster_optimization_metrics.csv  cluster_optimization_normalized.csv  cluster_physical_stats.csv  crystal_retrieval_K10.csv  crystal_retrieval_K10_bootstrap.csv  k_selection_justification.md  k_theory_families.csv  k_theory_prediction.csv  miller_classification_crosstab.csv
data/crystal/splits/: region_holdout_v1.csv
data/embeddings_legacy_march13/: finetuned_embedding_names.csv
docs/: crystal_project_overview.md  next_steps.md  sem_project_overview.md  versioning_policy.md
docs/results/crystal_leakage_check/: crystal_retrieval_K10_flatten_bootstrap.csv  crystal_retrieval_K10_flatten_split12deg_bootstrap.csv  crystal_retrieval_K10_simclr_split12deg_bootstrap.csv  leakage_summary.csv  leakage_summary_overall.csv  region_holdout_runbook.md
docs/results/sem_leakage_check/: cross_scale_ci_flatten32.csv  cross_scale_ci_imagenet_resnet50.csv  cross_scale_ci_simclr_finetuned.csv  leakage_summary.csv  leakage_summary_overall.csv
notebooks/: SimCLR_Colab.ipynb  crystal_region_holdout.ipynb  crystal_report.py  crystal_surface_report.ipynb  generate_html_report.py  md_to_html.py  prepare_colab_zip.py  simclr_pipeline.ipynb
scripts/: build_crystal_region_split.py  copy_crystal_images.py  fetch_artifacts.py  plot_cluster_metrics_figure.py  predict_k_theory.py  regenerate_embedding_names.py  run_sweep.py
src/crystal/: __init__.py  aggregate_leakage_check.py  analyze_clusters_physical.py  analyze_miller_indices.py  augmentations_crystal.py  dataset_crystal.py  extract_crystal_embeddings.py  extract_flatten_baseline.py  fix_embeddings_metadata.py  load_data.py  miller_utils.py  model_crystal.py  optimize_clusters.py  patch_generator.py  retrieve_crystal.py  train_crystal.py  visualize_crystal.py  visualize_surface.py
src/data/: annotate_tiles.py  data_prep.py  generate_sft_labels.py  sft_sampler.py  update_magnification.py
src/evaluation/: aggregate_leakage_check.py  cross_scale_comparison.py  cross_scale_retrieval.py  eval_utils.py  evaluate_sic_clustering.py  extract_flatten_baseline.py  knn_probe.py  linear_probe.py  run_sem_evaluation.py  scale_invariance_metrics.py
src/models/: experiment_multiscale.py  feature_extraction.py  heads.py  multiscale_feature_extraction.py
src/models/deep_clustering/: augmentations.py  dataset.py  loss.py  model.py  (+4 more)
src/utils/: repro.py  stats.py
src/visualization/: app.py  evaluate.py  visualize.py
tests/: test_annotate_persistence.py  test_sft_sampler.py  test_smoke.py
(+7 files in other folders)
